[package]
name = "mdbook-nocomment"
version = "0.1.0"
edition = "2021"
authors = ["d1t2 <dieterplex@gmail.com>"]
description = "Remove all html comments"
keywords = ["mdbook", "proprocessor"]
readme = "README.md"
repository = "https://github.com/dieterplex/mdbook-nocomment"
license = "LGPL-3.0-or-later OR MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", default-features = false, features = ["std"]}
itertools = "0.10"
log = "0.4"
mdbook = { version = "0.4", default-features = false }
pulldown-cmark = "0.9"
pulldown-cmark-to-cmark = "10.0"
serde_json = "1.0"
semver = "1.0"
